# rust-pptx

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: add_chart.rs  create_presentation.rs  open_and_inspect.rs
src/: comment.rs  embedded_font.rs  error.rs  lib.rs  print_settings.rs  section.rs  transition.rs
src/animation/: effects.rs  mod.rs  tests.rs  xml_gen.rs
src/chart/: chart.rs  chart_format.rs  chart_plot.rs  chart_tests.rs  datalabel.rs  datalabel_tests.rs  legend.rs  marker.rs  mod.rs  plot.rs  plot_tests.rs  series.rs  series_tests.rs  xlsx.rs  xlsx_parts.rs  xlsx_tests.rs
src/core_properties/: mod.rs  tests.rs  xml.rs
src/dml/: effect.rs  line.rs  mod.rs
src/enums/: action.rs  chart.rs  chart_enums.rs  chart_type.rs  chart_type_3d.rs  color_val.rs  color_val_preset.rs  color_val_preset_parse.rs  color_val_system.rs  dml.rs  dml_bevel.rs  dml_camera.rs  dml_core.rs  dml_pattern.rs  dml_scene3d.rs  lang.rs  misc.rs  mod.rs  shapes.rs  text.rs
src/export/: mod.rs
src/media/: audio.rs  image.rs  mod.rs  video.rs
src/opc/: constants.rs  content_type.rs  custom_xml.rs  mod.rs  part.rs
src/oxml/: mod.rs  ns.rs
src/presentation/: export.rs  fonts.rs  layouts.rs  media.rs  mod.rs  notes.rs  print.rs  signature.rs  slide_props.rs  slides.rs  vba.rs
src/repair/: mod.rs  repairer.rs  validator.rs
src/shapes/: action.rs  freeform.rs  graphfrm.rs  mod.rs  ole.rs  placeholder.rs  shape_accessors.rs
src/signature/: mod.rs  (+2 more)
tests/: integration_test.rs
(+131 files in other folders)
