[package]
name = "pptx"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A Rust library for creating and manipulating PowerPoint (.pptx) files"
license = "MIT"
repository = "https://github.com/hidemi-ito/rust-pptx"
homepage = "https://github.com/hidemi-ito/rust-pptx"
documentation = "https://docs.rs/pptx"
readme = "README.md"
authors = ["Hidemi Ito"]
keywords = ["pptx", "powerpoint", "presentation", "office", "openxml"]
categories = ["parser-implementations", "encoding"]
exclude = ["COMPATIBILITY.md", "CONTRIBUTING.md", ".github/", "*.rlib"]

[features]
default = []
cli = ["dep:clap"]

[[bin]]
name = "pptx-cli"
path = "src/bin/pptx_cli.rs"
required-features = ["cli"]

[dependencies]
zip = { version = "7", default-features = false, features = ["deflate-flate2-zlib-rs", "time"] }
quick-xml = "0.39"
thiserror = "2"
sha1 = "0.10"
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
